# datafusion-comet

./: .asf.yaml  .buildinfo  .dockerignore  .gitattributes  .gitignore  .jvmopts  .prettierignore  .scalafix-syntactic.conf  .scalafix.conf  AGENTS.md  APPLE-README.md  CHANGELOG.md  CLAUDE.md  DEBUGGING.md  DEVELOPMENT.md  EXPRESSIONS.md  ITERATOR_DOCUMENTATION.md  LICENSE.txt  Makefile  NOTICE.txt  PR1-description.md  PR_DESCRIPTION.md  README.md  build.sbt  build_for_centos7.sh  compatibility.html  genindex.html  gluten_comparison.html  index.html  ip-clearance-arrow-datafusion-comet.xml  objects.inv  overview.html  pom.xml  pom.xml.versionsBackup  pr_description.md  rio.yaml  run_shuffle_bench.sh  rust-toolchain  rust-toolchain.toml  scalafmt.conf  (+4 more)
contrib/delta/native/: Cargo.toml
contrib/example/native/: Cargo.toml  build.rs
core/: .lldbinit  Cargo.toml  Cross.toml  build.rs  comet_build_env_centos7.dockerfile  rustfmt.toml
core/benches/: cast.rs  cast_from_string.rs  cast_numeric.rs  common.rs  hash.rs  parquet_read.rs  perf.rs  regexp.rs  row_columnar.rs  shuffle_writer.rs
core/src/: errors.rs  lib.rs
core/src/common/: bit.rs  buffer.rs  mod.rs  mutable_vector.rs  vector.rs
core/src/execution/: jni_api.rs  memory_pool.rs  mod.rs  serde.rs  sort.rs
core/src/jvm_bridge/: batch_iterator.rs  comet_exec.rs  comet_metric_node.rs  comet_task_memory_manager.rs  mod.rs
core/src/parquet/: compression.rs  data_type.rs  mod.rs  mutable_vector.rs
core/testdata/: backtrace.txt
dev/benchmarking-bot/: .gitignore  Dockerfile  README.md  authorized_users.txt  pyproject.toml
dev/benchmarking-bot/deploy/: deploy.sh
dev/benchmarking-bot/k8s/: bot-deployment.yaml  comet-job-template.yaml
native/: .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml
native/ballista/: Cargo.toml  README.md
native/ballista/src/: codec.rs  ffi_jni.rs  fragment.rs  lib.rs  scan.rs  table_provider.rs
native/ballista/tests/: codec_roundtrip.rs  distributed.rs  ffi_roundtrip.rs  fragment_child_input.rs
native/block-cache/: Cargo.toml
native/block-cache/src/: cache.rs  error.rs  lib.rs  metrics.rs  sieve.rs  version.rs
native/block-cache/tests/: cache_tests.rs  neutrality.rs
native/comet-test-udfs/: Cargo.toml
native/comet-test-udfs/src/: lib.rs
native/comet-udf-sdk/: Cargo.toml
native/comet-udf-sdk/src/: adapter.rs  c_abi.rs  df_abi.rs  error.rs  lib.rs  macros.rs  types.rs
native/common/: Cargo.toml  README.md
native/common/src/: error.rs  lib.rs  query_context.rs  tracing.rs  utf8.rs  utils.rs
native/contrib-spi/: Cargo.toml
native/contrib-spi/src/: lib.rs
native/core/: Cargo.toml  README.md  build.rs
native/core/benches/: aggregate.rs  array_conversion.rs  array_element_append.rs  batch_serde.rs  bit_util.rs  bloom_filter_agg.rs  cast_from_string.rs  cast_numeric.rs  common.rs  complex_type_conversion.rs  filter.rs  hash.rs  jvm_shuffle.rs  parquet_decode.rs  parquet_read.rs  perf.rs  planner.rs  row_columnar.rs  shuffle_writer.rs  struct_conversion.rs  tpcds_join.rs
native/core/src/: comet_rust_udf_bridge.rs  data_type.rs  errors.rs  lib.rs
native/core/testdata/: backtrace.txt
native/core/tests/: ballista_codec_roundtrip.rs  ballista_distributed.rs  ballista_external_cluster.rs  ballista_ffi_roundtrip.rs  ballista_fragment_child_input.rs  ballista_offload_dag.rs
native/dragonbox/: Cargo.toml  README.md
native/dragonbox/benches/: bench.rs
native/dragonbox/src/: buffer.rs  cache.rs  div.rs  lib.rs  log.rs  to_chars.rs  wuint.rs
native/dragonbox/tests/: binary64_test.rs
native/fs-hdfs/: Cargo.toml  README.md  build.rs  rustfmt.toml
native/fs-hdfs/c_src/: wrapper.h
native/fs-hdfs/src/: err.rs  hdfs.rs  lib.rs  minidfs.rs  native.rs  util.rs
native/hdfs/: Cargo.toml  README.md
native/hdfs/src/: lib.rs
native/jni-bridge/: Cargo.toml  README.md
native/jni-bridge/src/: arrow_array_stream.rs  batch_iterator.rs  comet_cloud_credential_dispatcher.rs  comet_exec.rs  comet_metric_node.rs  comet_s3_credential_dispatcher.rs  comet_task_memory_manager.rs  comet_udf_bridge.rs  errors.rs  handle_batch_iterator.rs  lib.rs  shuffle_block_iterator.rs  shuffle_partition_pusher.rs
native/jni-bridge/testdata/: stacktrace.txt
native/jvm-bridge/: Cargo.toml
native/jvm-bridge/src/: errors.rs  lib.rs  spark_error.rs
native/object-store-cache/: Cargo.toml
native/object-store-cache/src/: lib.rs
native/proto/: Cargo.toml  README.md  build.rs
native/proto/src/: lib.rs
native/shuffle/: Cargo.toml  README.md
native/shuffle/benches/: row_columnar.rs  shuffle_writer.rs
native/shuffle/src/: codec.rs  comet_partitioning.rs  ipc.rs  lib.rs  metrics.rs  schema_align.rs  shuffle_writer.rs  spark_crc32c_hasher.rs
native/spark-errors/: Cargo.toml
native/spark-errors/src/: lib.rs
native/spark-expr/: Cargo.toml  README.md
native/spark-expr/benches/: aggregate.rs  array_compact.rs  array_size.rs  arrays_overlap.rs  arrays_zip.rs  base64.rs  bloom_filter_agg.rs  bloom_filter_might_contain.rs  case_when.rs  cast_binary_to_string.rs  cast_boolean.rs  cast_decimal_to_string.rs  cast_float_to_decimal.rs  cast_float_to_string.rs  cast_from_boolean.rs  cast_from_string.rs  cast_int_to_decimal.rs  cast_int_to_timestamp.rs  cast_narrowing.rs  cast_non_int_numeric_timestamp.rs  cast_numeric.rs  cast_string_to_boolean.rs  cast_string_to_date.rs  cast_string_to_decimal.rs  ceil.rs  check_overflow.rs  checked_arithmetic.rs  comparison.rs  conditional.rs  date_trunc.rs  date_trunc_array_fmt.rs  decimal_div.rs  decimal_rescale.rs  expr_or_null.rs  floor.rs  get_json_object.rs  log.rs  map_sort.rs  next_day.rs  normalize_nan.rs  (+14 more)
native/spark-expr/src/: abs.rs  array.rs  avg.rs  avg_decimal.rs  bitwise_not.rs  case_expr_or_null.rs  cast.rs  comet_high_order_funcs.rs  comet_scalar_funcs.rs  correlation.rs  covariance.rs  downcast.rs  error.rs  expr_or_null.rs  hll_scalar.rs  if_expr.rs  lib.rs  list.rs  normalize_nan.rs  parquet_support.rs  query_context.rs  rand.rs  regexp.rs  scalar_funcs.rs  (+13 more)
native/test-udfs/: Cargo.toml
native/utils/: Cargo.toml  README.md
(+7673 files in other folders)
