# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "comet"
version = "0.1.0"
edition = "2021"
include = [
    "benches/*.rs",
    "src/**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet-format = "4.0.0" # This must be kept in sync with that from parquet crate
arrow = { version = "~50.0.0", features = ["prettyprint", "ffi", "chrono-tz"] }
arrow-array = { version = "~50.0.0" }
arrow-data = { version = "~50.0.0" }
arrow-schema = { version = "~50.0.0" }
arrow-string = { version = "~50.0.0" }
parquet = { version = "~50.0.0", default-features = false, features = ["experimental"] }
half = { version = "~2.1", default-features = false }
futures = "0.3.28"
mimalloc = { version = "*", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.8" }
async-trait = "0.1"
log = "0.4"
log4rs = "1.2.0"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
prost = "0.12.1"
thrift = "0.17"
jni = "0.21"
byteorder = "1.4.3"
snap = "1.1"
brotli = "3.3"
flate2 = "1.0"
lz4 = "1.24"
zstd = "0.11"
rand = "0.8"
num = "0.4"
bytes = "1.5.0"
hashbrown = { version = "0.14", features = ["raw"] }
parking_lot = "0.12"
tempfile = "3.8.0"
ahash = { version = "0.8", default-features = false }
itertools = "0.11.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = { version = "0.8" }
paste = "1.0.14"
datafusion-common = { version = "35.0.0" }
datafusion = { default-features = false, version = "35.0.0", features = ["unicode_expressions"] }
datafusion-physical-expr = { version = "35.0.0", default-features = false , features = ["unicode_expressions"] }
unicode-segmentation = "^1.10.1"
once_cell = "1.18.0"
regex = "1.9.6"
crc32fast = "1.3.2"
simd-adler32 = "0.3.7"

[build-dependencies]
prost-build = "0.9.0"

[dev-dependencies]
pprof = { version = "0.13.0", features = ["flamegraph"] }
criterion = "0.5.1"
jni = { version = "0.21", features = ["invocation"] }
lazy_static = "1.4"
assertables = "7"

[features]
default = []
nightly = []

[profile.release]
debug = true
overflow-checks = false
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[lib]
name = "comet"
# "rlib" is for benchmarking with criterion.
crate_type = ["cdylib", "rlib"]

[[bench]]
name = "parquet_read"
harness = false

[[bench]]
name = "bit_util"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "row_columnar"
harness = false

