# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
default-members = ["core", "spark-expr", "common", "proto", "jni-bridge", "shuffle"]
members = ["core", "spark-expr", "common", "proto", "jni-bridge", "shuffle", "hdfs", "fs-hdfs"]
resolver = "2"

[workspace.package]
version = "1.0.0"
homepage = "https://datafusion.apache.org/comet"
repository = "https://github.com/apache/datafusion-comet"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
description = "Apache DataFusion Comet: High performance accelerator for Apache Spark"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

# Comet uses the same minimum Rust version as DataFusion
rust-version = "1.88"

[workspace.dependencies]
arrow = { version = "58.3.0", features = ["prettyprint", "ffi", "chrono-tz"] }
async-trait = { version = "0.1" }
bytes = { version = "1.11.1" }
parquet = { version = "58.3.0", default-features = false, features = ["experimental"] }
datafusion = { version = "54.0.0", default-features = false, features = ["unicode_expressions", "crypto_expressions", "nested_expressions", "parquet"] }
datafusion-datasource = { version = "54.0.0" }
datafusion-physical-expr-adapter = { version = "54.0.0" }
datafusion-spark = { version = "54.0.0", features = ["core"] }
datafusion-comet-spark-expr = { path = "spark-expr" }
datafusion-comet-common = { path = "common" }
datafusion-comet-jni-bridge = { path = "jni-bridge" }
datafusion-comet-proto = { path = "proto" }
datafusion-comet-shuffle = { path = "shuffle" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = { version = "0.10" }
futures = "0.3.32"
num = "0.4"
rand = "0.10"
regex = "1.12.3"
thiserror = "2"
object_store = { version = "0.13.2", features = ["gcp", "azure", "aws", "http"] }
url = "2.2"
aws-config = "1.8.18"
aws-credential-types = "1.2.13"
iceberg = { git = "https://github.com/apache/iceberg-rust", rev = "148afc5" }
iceberg-storage-opendal = { git = "https://github.com/apache/iceberg-rust", rev = "148afc5", features = ["opendal-memory", "opendal-fs", "opendal-s3", "opendal-gcs", "opendal-oss", "opendal-azdls"] }
reqsign-core = "3"

[profile.release]
debug = true
overflow-checks = false
lto = "thin"
codegen-units = 1
strip = "debuginfo"

# CI profile: faster compilation, same overflow behavior as release
# Use with: cargo build --profile ci
[profile.ci]
inherits = "release"
lto = false          # Skip LTO for faster linking
codegen-units = 16   # Parallel codegen (faster compile, slightly larger binary)
debug-assertions = true
panic = "unwind"     # Allow panics to be caught and logged across FFI boundary
# overflow-checks inherited as false from release

# TEMPORARY (issue #4859): build against the DataFusion fork branch carrying the
# nested-projection leaf-mask fix. The branch is off tag 54.0.0, so it is API-identical
# to the crates.io 54.0.0 build. Drop this once the fix lands in a DataFusion release.
[patch.crates-io]
datafusion = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-catalog = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-catalog-listing = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-common = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-common-runtime = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-datasource = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-datasource-arrow = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-datasource-avro = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-datasource-csv = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-datasource-json = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-datasource-parquet = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-doc = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-execution = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-expr = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-expr-common = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-ffi = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-functions = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-functions-aggregate = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-functions-aggregate-common = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-functions-nested = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-functions-table = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-functions-window = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-functions-window-common = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-macros = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-optimizer = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-physical-expr = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-physical-expr-adapter = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-physical-expr-common = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-physical-optimizer = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-physical-plan = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-proto = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-proto-common = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-pruning = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-session = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-spark = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-sql = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
datafusion-substrait = { git = "https://github.com/mbutrovich/datafusion", branch = "comet-4859-nested-projection" }
