# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-comet-ballista"
version = { workspace = true }
homepage = "https://datafusion.apache.org/comet"
repository = "https://github.com/apache/datafusion-comet"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
description = "Runs Apache DataFusion Comet native plans as leaves in Apache DataFusion Ballista"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

# this crate does not contain public Rust APIs so we do not publish it
publish = false

# `cdylib` builds libcomet_ballista.{dylib,so} carrying the JNI submission entry
# (loaded by the JVM alongside libcomet); `rlib` keeps the crate usable from
# Rust integration tests.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.22.4"
datafusion-comet = { path = "../core" }
datafusion-comet-proto = { workspace = true }
datafusion = { workspace = true, features = ["parquet"] }
datafusion-ffi = "54.0.0"
datafusion-proto = "54.0.0"
async-trait = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
prost = "0.14.3"
futures = { workspace = true }

ballista = { workspace = true }
ballista-core = { workspace = true }
ballista-scheduler = { workspace = true }
ballista-executor = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
