# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-comet-block-cache"
description = "Apache DataFusion Comet: storage-API-neutral block cache core (memory + SSD tiers)"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

publish = false

# NOTE: This crate is storage-API-neutral by construction. It MUST NOT depend on
# `object_store`, `opendal`, or any Comet crate. The caller supplies a `RangeFetcher`;
# the core never talks to storage itself. A dependency-tree check in CI guards this
# boundary (see the `dependency_tree_is_storage_neutral` test).
[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
log = "0.4"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }

[lib]
name = "datafusion_comet_block_cache"
path = "src/lib.rs"
