# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "comet-contrib-spi"
description = "Stable SPI surface that contrib crates and Comet's core both depend on. Defines the ContribOperatorPlanner trait, ContribPlannerContext, the process-wide registry, and the lightweight error type. Separating this from the core crate breaks what would otherwise be a cyclic dependency (core links contribs via Cargo feature flags; contribs need core types)."
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
# Public types in the SPI reference these crates. Pinning matches core via workspace.
datafusion = { workspace = true }
datafusion-comet-proto = { workspace = true }
# Surface the `Path` type on the SPI's prepare_object_store return value.
object_store = { workspace = true }
log = "0.4"
# Lock-free registry primitive. Reads (per ContribOp dispatch, hot path) are one atomic
# load + ref-count bump; writes (per contrib's #[ctor] at lib init) are an RCU swap.
arc-swap = "1"

[features]
# Off by default. When enabled, the crate exposes `ScopedContribPlannerRegistration` and
# `_clear_for_test` for downstream test code that needs to register planners without
# polluting the process-wide registry. The same surfaces are unconditionally available
# under `#[cfg(test)]` for the SPI's own unit tests.
test-utils = []
