# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "fs-hdfs3"
version = "0.1.12"
edition = "2021"

description = "libhdfs binding library and safe Rust APIs"
authors = ["Yanghong Zhong <nju_yaho@apache.org>"]
license = "Apache-2.0"

keywords = ["hdfs", "hadoop"]
documentation = "https://docs.rs/crate/fs-hdfs3"
homepage = "https://github.com/datafusion-contrib/fs-hdfs"
repository = "https://github.com/datafusion-contrib/fs-hdfs"
readme = "README.md"

[lib]
name = "hdfs"
path = "src/lib.rs"

[features]
default = ["test_util"]
test_util = []
use_existing_hdfs = []

[build-dependencies]
cc = "1"
bindgen = "0.64.0"
java-locator = { version = "0.1.9", features = ["locate-jdk-only"] }

[dependencies]
lazy_static = "^1.4"
libc = "^0.2"
url = "^2.2"
log = "^0.4"

[dev-dependencies]
uuid = {version = "^0.8", features = ["v4"]}
tempfile = "^3.2"
