# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

# This is an optional HDFS crate
# To build it from root is required to provide a valid JAVA_HOME
# and enable `hdfs` feature
# Example: JAVA_HOME="/opt/homebrew/opt/openjdk@11" cargo build --features=hdfs

[package]
name = "datafusion-objectstore-hdfs"
description = "Comet HDFS integration. Initiated by Yanghong Zhong <nju_yaho@apache.org> (https://github.com/datafusion-contrib/datafusion-objectstore-hdfs)"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = ["hdfs", "try_spawn_blocking"]
hdfs = ["fs-hdfs"]
hdfs3 = ["fs-hdfs3"]
# Used for trying to spawn a blocking thread for implementing each object store interface when running in a tokio runtime
try_spawn_blocking = []

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
fs-hdfs = { version = "^0.1.12", optional = true }
fs-hdfs3 = { version = "^0.1.12", optional = true }
futures = { workspace = true }
object_store = { workspace = true }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
