# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-comet-shuffle"
description = "Apache DataFusion Comet: shuffle writer and reader"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

publish = false

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { version = "4", features = ["derive"], optional = true }
crc32fast = "1.3.2"
datafusion = { workspace = true }
datafusion-comet-common = { workspace = true }
datafusion-comet-jni-bridge = { workspace = true }
datafusion-comet-spark-expr = { workspace = true }
futures = { workspace = true }
itertools = "0.14.0"
jni = "0.21"
log = "0.4"
lz4_flex = { version = "0.13.0", default-features = false, features = ["frame"] }
parquet = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
simd-adler32 = "0.3.7"
snap = "1.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
zstd = "0.13.3"

[dev-dependencies]
criterion = { version = "0.7", features = ["async", "async_tokio", "async_std"] }
datafusion = { workspace = true, features = ["parquet_encryption", "sql"] }
itertools = "0.14.0"
tempfile = "3.26.0"

[features]
shuffle-bench = ["clap", "parquet", "rand"]

[lib]
name = "datafusion_comet_shuffle"
path = "src/lib.rs"

[[bin]]
name = "shuffle_bench"
path = "src/bin/shuffle_bench.rs"
required-features = ["shuffle-bench"]

[[bench]]
name = "shuffle_writer"
harness = false

[[bench]]
name = "row_columnar"
harness = false
